# DS_OC_Projet2

./: P2_OC.ipynb  README.md  powerpoint_OC_P2.pptx  pyproject.toml
